    - Move your units to "from" CC, indicated by green outline
    - Active CC scans player units to teleport every 15 seconds. 24 units per batch. Up to 96 units per minute.
    - ----- End Teleportation Framework -----
    - ----- End Player Army Frameworks -----
    - Added post process package for some indexes. Requires "Enemy Race Manager - Post Process" package.


  Graphics:
    - Added new graphics for explosions and attack effects. Requires "Enemy Race Manager Asset Pack" package.

  Sounds:
    - Added "max population" sound effect
    - Added "force under attack" when player unit dies.
    - Added "base under attack" to replace default alert.

  Changes:
    - When a custom attack squad completes an attack command, it will pick a new attack area. Instead of converting to automatic group.
    - Level up check now runs every 10 mins, not configurable.
    - When boss is active, Leveling up is halt until boss mode end.
    - Refactored custom attack handler to reduce remote calls.
    - Refactored GUI handlers.
    - Killing units / turrets now always count toward evolution points.
    - Tweaked base expansion formation number.
    - Tweaked unit group will not slow down to wait members. Slow members run double speed to catch up.
    - When a unit group marks as always angry, they will always be distracted by anything.

---------------------------------------------------------------------------------------------------
Version: 1.15.5
Date: 2022-09-02

  Bugfixes:
    - Yet another attempt to fix high level units escaping the level processor in early game.
    - Added an early game high level unit elimination function.

---------------------------------------------------------------------------------------------------
Version: 1.15.4
Date: 2022-08-20

  Bugfixes:
    - Fix level slider bug where when you are one level under max_level. The slide uses 0.05 interval. (Github Issue 23)
