@@ -234,6 +234,4 @@ https://github.com/heyqule/enemy_race_manager/projects/1
 ### Uninstall
 Please use the "Reset to default biters" button to replace ERM enemies with default biters before you remove the mod.  Otherwise, your map won't have any enemies on generated chucks as the ERM enemies are removed automatically.
 
-### SPECIAL THANKS
-- Russian Translation: SeptiSe7ven, Luis_Mitchell
-- Spanish Translation: Magick93
+### SPECIAL THANKS TO ALL CROWDIN TRANSLATORS
