@@ -27,3 +27,5 @@ require "prototypes/extend-boss-items"
 require "prototypes/extend-inputs"
 
 require "prototypes/extend-army-events"
+
+require "prototypes/extend-recipes"
