@@ -408,3 +408,6 @@ psi-tracking-satellite=Psi Tracking Satellite
 
 [item-description]
 psi-tracking-satellite=This satellite contains a fish tank with a batch of psi enhanced fish. They detect hidden boss base from one of the enemy race.  Defeat it for a reward or it will bring hell to your base!
+
+[recipe-description]
+barrel-steel-plate=Break down barrel to steel plate at 80% efficiency.
