@@ -1,0 +1,45 @@
+---
+--- Generated by EmmyLua(https://github.com/EmmyLua)
+--- Created by heyqule.
+--- DateTime: 12/1/2022 11:26 PM
+---
+
+data:extend(
+        {
+            {
+                type = "recipe",
+                name = "barrel-steel-plate",
+                subgroup = "empty-barrel",
+                category = "smelting",
+                energy_required = 5,
+                enabled = false,
+                icons = {
+                    {
+                        icon = "__base__/graphics/icons/steel-plate.png",
+                        icon_size = 64,
+                    },
+                    {
+                        icon = "__base__/graphics/icons/fluid/barreling/empty-barrel.png",
+                        icon_size = 64,
+                        scale = 0.25,
+                        shift = {9,9}
+                    },
+                },
+                ingredients =
+                {
+                    {type="item", name="empty-barrel", amount=10}
+                },
+                results=
+                {
+                    {type="item", name="steel-plate", amount=8}
+                },
+                allow_decomposition = false,
+            },
+})
+
+table.insert(data.raw['technology']['fluid-handling']['effects'],
+        {
+            type = "unlock-recipe",
+            recipe = "barrel-steel-plate",
+        }
+)
