@@ -33,6 +33,7 @@ Date: 2022-??-??
     - ----- End Teleportation Framework -----
     - ----- End Player Army Frameworks -----
     - Added post process package for some indexes. Requires "Enemy Race Manager - Post Process" package.
+    - Add barrel > steele plate recipe for furnace. Reward can return liquid barrels. you may end up with a lot of barrels.
 
 
   Graphics:
@@ -53,6 +54,9 @@ Date: 2022-??-??
     - Tweaked base expansion formation number.
     - Tweaked unit group will not slow down to wait members. Slow members run double speed to catch up.
     - When a unit group marks as always angry, they will always be distracted by anything.
+    - Most reinforced item health have buff to around 900 - 1000. Except express belt stay at 680.
+    - Add reinforced substation
+    - All reinforced entities are now military entities, except wall
 
 ---------------------------------------------------------------------------------------------------
 Version: 1.15.5
